# solana_device_id

./: .env  .gitignore  Anchor.toml  README.md  client.ts  package-lock.json  package.json
indexer/device_did/: .env  base_tsconfig.json  doc.md  docker-compose.yaml  env.example  package.json  run.ts  tsconfig.json
indexer/device_did/src/: constants.ts  types.ts
indexer/device_did/src/api/: resolvers.ts  schema.ts  types.ts
indexer/device_did/src/dal/: event.ts
indexer/device_did/src/domain/: account.ts  main.ts  worker.ts
indexer/device_did/src/domain/stats/: timeSeries.ts  (+2 more)
indexer/device_did/src/parsers/: event.ts
indexer/explorer/: .eslintrc.json  config-overrides.js  env.example  package.json
indexer/explorer/public/: index.html  manifest.json
indexer/explorer/src/: App.js  index.js
indexer/explorer/src/hooks/: useAnchorProvider.jsx  useDeviceProgram.jsx
indexer/explorer/src/idl/: device_did.json
indexer/explorer/src/keypairs/: treasury.json
keypairs/: admin-authority.json  admin.json  device.json  test.json  vendor-authority.json
programs/device-did/: Cargo.toml
programs/device-did/src/: constants.rs  error.rs  lib.rs  record.md  state.rs  utils.rs
programs/device-did/src/instructions/: activate_device.rs  create_device.rs  create_device_and_did.rs  create_product_collection.rs  create_vendor.rs  initialize_admin.rs  initialize_global.rs  mint_device_did.rs  mod.rs
programs/device-did/src/tools/: mod.rs  secp256k1.rs
scripts/: device-did-ft.ts  device-did-run.ts
tests/: device-did.ts  eth-verify.ts  verify.ts
utils/: utils.ts
(+66 files in other folders)
